--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://umais2005.github.io/new_portfolio",
+  "homepage": "https://umais.dev",
   "name": "new_portfolio",
   "version": "0.1.0",
   "private": true,
